JSW Devsb/src/objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Counter__c</fullName>
        <label>Actual Counter</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <formula>CASE( Status_of_the_Event__c , &quot;Completed&quot;, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Districts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Districts</label>
        <referenceTo>Districts__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_id__c</fullName>
        <label>Event id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Name_of_Counter__c</fullName>
        <label>Name of Counter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Invitees_for_Each_Meet__c</fullName>
        <label>No Of Invitees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Planned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>PSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concreel HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GGBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSC &amp; CHD</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Districts__r.State__r.Name</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_of_the_Event__c</fullName>
        <label>Status of the Event</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postponed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Meet__c</fullName>
        <label>Type of Meet</label>
        <picklist>
            <picklistValues>
                <fullName>Counter meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project site meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mason meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractors meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer staff training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canopy based activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IHB MEET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>plant visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stationay lab based activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete mix design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering college lecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineers Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Govt &amp; Inst Meets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mega Mason Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Builder/Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-Dealers meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsered Meets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP Meets</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type_of_Meet__c</columns>
        <columns>Event__c</columns>
        <columns>District__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>City__c</columns>
        <columns>Name_of_Counter__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Mason_meet</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Mason meet</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Counter_Mandatory</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(Type_of_Meet__c , &apos;Counter Meet&apos;) ,   ISBLANK( Name_of_Counter__c ))</errorConditionFormula>
        <errorDisplayField>Name_of_Counter__c</errorDisplayField>
        <errorMessage>Please enter a value</errorMessage>
    </validationRules>
</CustomObject>